--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "myfy",
+  "name": "Discover Now",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/Henry-Sarabia/myfy.git",
+  "repository": "https://github.com/Henry-Sarabia/discover-server.git",
   "author": "Henry-Sarabia <henrysarabia@mail.fresnostate.edu>",
   "license": "MIT",
   "dependencies": {
